@@ -1,0 +1,1 @@
+cdecl @ @ @ explain int f(char (*(*)())[]) @ 0
