@@ -53,6 +53,9 @@ Declarations like:
 
 are now correctly flagged as illegal.
 
+** Fixed "pointer to function returning pointer to array" function argument
+A declaration like `int f(char (*(*)())[])` is now parsed correctly.
+
 ** Microsoft `__forceinline` declarations
 Added support for `__forceinline` (and `_forceinline`), but they're treated as
 `inline`.
